[workspace]
resolver="2"
members = [
    "crates/rustmesh-core",
    "crates/rustmesh-node",
    "crates/rustmesh-benchmark",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["sabinonweb"]
repository = "https://github.com/sabinonweb/rustmesh"


[workspace.dependencies]
# Async & concurrency
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
tokio-util = "0.7"

# libp2p stack
libp2p = { version = "0.53", features = ["full"]}


# Serialization
serde = { version = "1.0", features = ["derive"] }
wincode = {version = "0.5.0", features = ["derive"]}

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
bytes = "1.5"
hex = "0.4"
chrono = "0.4"
rand = "0.8"
toml = "1.1.0"
