[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = {version = "2", features=["rand_core"]}
rand = "0.8"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
clap = { version = "4.5.60", features = ["derive"] }
quinn = "0.11.9"
once_cell = "1.21.3"
sha2 = "0.10.9"
