[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../../crates/core" }
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
anyhow = "1"
mdns-sd = "0.17.2"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.60", features = ["derive"] }
once_cell = "1.21.3"
