[package]
name = "rustmesh-benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
libp2p = { workspace = true }
serde = { workspace = true }
wincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
rustmesh-core = { path = "../rustmesh-core" }
rustmesh-node = { path = "../rustmesh-node/" }
btleplug = { workspace = true}

[dev-dependencies]
tokio-test = "0.4"
