[package]
name = "rustmesh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
wincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
