[package]
name = "rustmesh-node"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "rustmesh-node"
path = "src/main.rs"

[dependencies]
rustmesh-core = { path = "../rustmesh-core" }
tokio = { workspace = true }
libp2p = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "integration"
path = "../../tests/integration/lib.rs"
